[gd_scene load_steps=9 format=2]

[ext_resource path="res://player/PlayerController3rd.gd" type="Script" id=1]
[ext_resource path="res://player/Camera.gd" type="Script" id=2]
[ext_resource path="res://player/grass_sfx.gd" type="Script" id=3]
[ext_resource path="res://sound/air_rush.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/kick.wav" type="AudioStream" id=5]
[ext_resource path="res://charactermodel/body.tscn" type="PackedScene" id=6]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="BoxShape" id=2]

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 2, 3 )
current = true
far = 115.0
script = ExtResource( 2 )

[node name="PlayerCollider" type="CollisionShape" parent="."]
transform = Transform( 0.25, 0, 0, 0, 0.9, 0, 0, 0, 0.25, 0, 0.9, 0 )
shape = SubResource( 1 )

[node name="Tail" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.778558, 0 )
enabled = true
cast_to = Vector3( 0, -1.2, 0 )

[node name="grass_sfx" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
script = ExtResource( 3 )

[node name="air_rush" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="Body" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 0, 0, 0 )

[node name="Area" type="Area" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.4, 0, 0, 0, 0.5, 0, 0, 0, 0.4, 0, 0.9, -0.409591 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
